resolves #5 added visibility

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -180,12 +180,14 @@ a {
 }
 
 .btn-primary {
+  font-size: 1rem;
   font-weight: 700;
   color: var(--white);
   letter-spacing: 0.5px;
   background-color: var(--primary-600);
 }
 .btn-secondary {
+  font-size: 1rem;
   font-weight: 700;
   color: var(--black);
   letter-spacing: 0.5px;
